--- a/ch09-proj2.html
+++ b/ch09-proj2.html
@@ -6,7 +6,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">  
     <link href="ch09-proj2.css" rel="stylesheet">
-    <script src="paintings.json"></script> 
+    <script src="paintings.js"></script> 
     <script src="ch09-proj2.js"></script> 
 </head>
 <body>
